Created a list items

--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
 <body>
     <h1>Git Tutorial</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda hic tempore totam nihil sed pariatur amet repellendus architecto laudantium quo?</p>
+    <li>List item 1</li>
+    <li>List item 2</li>
+    <li>List item 3</li>
 </body>
 </html>
