Added a new paragraph

--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
     <li>List item 1</li>
     <li>List item 2</li>
     <li>List item 3</li>
+
+    <p>This is a new addition to the branch</p>
 </body>
 </html>
